@@ -53,6 +53,8 @@ let windows_unicode = false
 let flat_float_array = true
 let function_sections = false
 let afl_instrument = false
+let bytecode_runtime_id = ""
+let native_runtime_id = ""
 let native_compiler = false
 let tsan = false
 let architecture = "none"
